// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobileMoneyMenu should list correct options 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Gather input="dtmf" method="POST" language="en-GB" hints="account information,account,information,pay bill,pay,bill,make transfer,transfer" numDigits="1" timeout="5">
        <Say language="en-GB" voice="Polly.Emma-Neural">
            mobile-money-balance
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            pay-bill
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            transfer
        </Say>
    </Gather>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./mobilemoney
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"Digits": "1"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./mobilemoney/account-info
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"Digits": "2"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./mobilemoney/pay-bill
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"Digits": "3"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./mobilemoney/transfer
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"SpeechResult": "account information"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./mobilemoney/account-info
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"SpeechResult": "go swimming"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./mobilemoney
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"SpeechResult": "make transfer"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./mobilemoney/transfer
    </Redirect>
</Response>
`;

exports[`mobileMoneyMenu should respond to {"SpeechResult": "pay bill"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./mobilemoney/pay-bill
    </Redirect>
</Response>
`;
